feat: optimize consul long polling via asyn request